IdentityServer4 behind the Zuul proxy
Former-commit-id: be5684c0b9b44e159793c6f9c8a86b2a64820648
Former-commit-id: 1280fe7b92e27e71e7e73e7dd3c135cc4eab0074 [formerly ffdfd8d440e04be6de1faf3ae18303fe3d212a0e]
Former-commit-id: a1c9530d2df9c3f1cbc78ef0281973a29fb99e40

--- a/src/Server/services/identity.api/Identity.API/Views/Account/Login.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Account/Login.cshtml
@@ -1,7 +1,13 @@
 @using Identity.API.Controllers.Account
 @model Identity.API.Controllers.Account.LoginViewModel
 
-<div class="my-login-page">
+@using Microsoft.Extensions.Configuration
+@using Identity.API.Utils
+
+@inject IConfiguration configuration
+@{ var basePath = configuration.GetBasePath(); }
+
+<div class="my-login-page h-100">
     <section class="h-100">
 		<div class="container h-100">
             <partial name="_ValidationSummary" />
@@ -10,7 +16,7 @@
                 {
                     <div class="card-wrapper">
                         <div class="brand">
-                            <img src="~/logo.jpg" alt="logo">
+                            <img src="@basePath/logo.jpg" alt="logo">
                         </div>
                         <div class="card fat">
                             <div class="card-body">
@@ -50,7 +56,7 @@
                                         </button>
                                     </div>
                                     <div class="mt-4 text-center">
-                                        Don't have an account? <a asp-controller="Account" asp-action="Register">Create One</a>
+                                        Don't have an account? <a asp-controller="Account" asp-route="Register">Create One</a>
                                     </div>
                                 </form>
                             </div>
