--- a/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     {
         name = Context.User?.GetDisplayName();
     }
-    var (hasBasePath, basePath) = configuration.BasePath();
+    var basePath = configuration.GetBasePath();
 }
 <!DOCTYPE html>
 <html>
@@ -18,21 +18,20 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IdentityServer4</title>
-    <link rel="icon" type="image/x-icon" href="~@basePath/favicon.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="~@basePath/favicon.ico" />
-    <link rel="stylesheet" href="~@basePath/lib/bootstrap/css/bootstrap.css" />
-    <!-- <link rel="stylesheet" href="~/css/site.css" /> -->
-    <link rel="stylesheet" href="~@basePath/css/my-login.css"/> 
+    <title>Restaurant Identity</title>
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
+    <link rel="stylesheet" href="@basePath/lib/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="@basePath/css/site.css" />
+    <link rel="stylesheet" href="@basePath/css/my-login.css"/> 
 </head>
 <body>
-    
-    <div>
+    <div class="h-100">
         @RenderBody()
     </div>
-    <script src="~@basePath/lib/jquery/jquery.js"></script>
-    <script src="~@basePath/lib/bootstrap/js/bootstrap.js"></script>
-    <script src="~@basePath/js/my-login.js"></script>
+    <script src="@basePath/lib/jquery/jquery.js"></script>
+    <script src="@basePath/lib/bootstrap/js/bootstrap.js"></script>
+    <script src="@basePath/js/my-login.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
