--- a/src/Server/services/identity.api/Identity.API/Views/Account/Login.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Account/Login.cshtml
@@ -56,7 +56,7 @@
                                         </button>
                                     </div>
                                     <div class="mt-4 text-center">
-                                        Don't have an account? <a asp-controller="Account" asp-route="Register">Create One</a>
+                                        Don't have an account? <a asp-controller="Account" asp-action="Register">Create One</a>
                                     </div>
                                 </form>
                             </div>
