--- a/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
     <div class="h-100">
         @RenderBody()
     </div>
-    <script src="@basePath/lib/jquery/jquery.js"></script>
-    <script src="@basePath/lib/bootstrap/js/bootstrap.js"></script>
+    <script src="@basePath/lib/jquery/jquery.min.js"></script>
+    <script src="@basePath/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="@basePath/js/my-login.js"></script>
 
     @RenderSection("scripts", required: false)
