swagger ui on the Zuul gateway for all microservices
Former-commit-id: 9c71f68a5d1eb8c095eb5cf03d4249d0f6c417fe
Former-commit-id: 90efc5b33988b6732afd32c13687ac4bd5c6a4f9 [formerly 86beb5bb0e8230d297ece96e2f668d7edecc4d76]
Former-commit-id: 5aee1b0d68b0637c9c8c89c4ad66778e623ce36e

--- a/src/Server/web/web.admin/dashboard/src/app/components/foods/add/add.component.html
+++ b/src/Server/web/web.admin/dashboard/src/app/components/foods/add/add.component.html
@@ -12,6 +12,7 @@
       </mat-form-field>
       <mat-form-field>
         <input matInput placeholder="Currency" [(ngModel)]="food.currency" name="currency">
+        <mat-error></mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-select placeholder="Categories" [(ngModel)]="food.categoryId" name="categoryId">
@@ -21,7 +22,7 @@
         </mat-select>
       </mat-form-field>
       <div style="margin:15px 0">
-        <input (change)="imageUpload($event)" #file type="file" id="file">
+        <input (change)="imageUpload($event)" multiple #file type="file" id="file">
       </div>
       <div class="images-container" *ngIf="allPictures?.length > 0">
         <mat-card *ngFor="let picture of allPictures">
@@ -35,10 +36,11 @@
         </mat-card>
       </div>
     </mat-card-content>
-    <mat-divider></mat-divider>
     <mat-card-actions align='end'>
-      <mat-spinner-button class="save-button" [options]="saveButtonsOpts" type="submit">Save</mat-spinner-button>
-      <button mat-raised-button type="button" (click)="onCancel()">Cancel</button>
+      <div style="margin-top: 20px">
+        <mat-spinner-button class="save-button" [options]="saveButtonsOpts" type="submit">Save</mat-spinner-button>
+        <button mat-raised-button type="button" (click)="onCancel()">Cancel</button>
+      </div>
     </mat-card-actions>
   </form>
 </mat-card>
