--- a/src/Server/web/web.admin/dashboard/src/app/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/Server/web/web.admin/dashboard/src/app/components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Hi {{data.title}}</h1>
+<h1 mat-dialog-title>{{data.title}}</h1>
 <div mat-dialog-content>
   <p>{{data.description}}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">{{data.negativeButtonText}}</button>
-  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="true">{{data.positiveButtonText}}</button>
+  <button mat-raised-button (click)="onNoClick()" cdkFocusInitial>{{data.negativeButtonText}}</button>
 </div>
