Xamarin.Forms code improvements
Former-commit-id: 1dd2bc7d400f7ab2783193d86c102aefad82a98d
Former-commit-id: 621ba064a886f73eae64ed1743fe971f24e9d1ce [formerly 5c2f4873b44e75dd9063cb6d48cabf26334409da]
Former-commit-id: cbedca7b5077f897d9895d1ff137f5ec21868a53

--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
@@ -8,15 +8,16 @@
                           xmlns:pages="clr-namespace:Restaurant.Mobile.UI.Pages;assembly=Restaurant.Mobile.UI"
                           xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls;assembly=Restaurant.Mobile.UI"
                           xmlns:views="clr-namespace:Restaurant.Mobile.UI.Views;assembly=Restaurant.Mobile.UI"
+                          xmlns:food="clr-namespace:Restaurant.Core.ViewModels.Food;assembly=Restaurant.Core"
                           x:Class="Restaurant.Mobile.UI.Pages.FoodDetailPage"
                           mc:Ignorable="d"
-                          d:DataContext="{d:DesignInstance viewModels:FoodDetailViewModel}">
+                          d:DataContext="{d:DesignInstance food:FoodDetailViewModel}">
 
     <pages:FoodDetailPage.ToolbarItems>
         <controls:BadgeToolbarItem Icon="ic_shopping_cart_white" Command="{Binding GoToBasket}"
                                    BadgeColor="{StaticResource badgeColor}"
                                    BadgePressedColor="{StaticResource badgeColor}"
-                                   BadgeText="{Binding BasketViewModel.OrdersCount}" />
+                                   BadgeText="{Binding BasketItemsCount}" />
     </pages:FoodDetailPage.ToolbarItems>
 
     <AbsoluteLayout>
