Foods list view changed into CollectionView
Former-commit-id: e70286aea6176e45159d73520d71552db4b3b960
Former-commit-id: cdfa7bb1ccaa9d46779a634c54a261d017ec859f [formerly b92be93b16de93046d0cd0583db3298035917b18]
Former-commit-id: 887302c9d7223eb4400957d89a864dd5c5e910d4

--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
@@ -31,24 +31,23 @@
     </pages:FoodsXamlPage.ToolbarItems>
 
     <pages:FoodsXamlPage.Content>
-        <Grid>
-            <views:FoodsListView ItemsSource="{Binding Foods}"
-                                 IsVisible="{Binding IsLoading, Converter={StaticResource InverseBoolConverter}}"
-                                 SelectedItem="{Binding SelectedFood}"
-                                 x:Name="FoodsList" />
+        <views:FoodsListView ItemsSource="{Binding Foods}"
+                             IsVisible="{Binding IsLoading, Converter={StaticResource InverseBoolConverter}}"
+                             SelectedItem="{Binding SelectedFood}"
+                             SelectionMode="Single"
+                             x:Name="FoodsList" />
 
-            <StackLayout IsVisible="{Binding IsLoading}" HorizontalOptions="Center" VerticalOptions="Center">
-                <ActivityIndicator IsRunning="{Binding IsLoading}"
-                                   HorizontalOptions="Center"
-                                   VerticalOptions="EndAndExpand">
-                    <ActivityIndicator.Color>
-                        <OnPlatform x:TypeArguments="Color">
-                            <On Platform="Android" Value="{StaticResource primaryColor}" />
-                        </OnPlatform>
-                    </ActivityIndicator.Color>
-                </ActivityIndicator>
-                <Label TextColor="{StaticResource asphaltDark}" HorizontalOptions="Center">Loading...</Label>
-            </StackLayout>
-        </Grid>
+        <!-- <StackLayout IsVisible="{Binding IsLoading}" HorizontalOptions="Center" VerticalOptions="Center"> -->
+        <!--     <ActivityIndicator IsRunning="{Binding IsLoading}" -->
+        <!--                        HorizontalOptions="Center" -->
+        <!--                        VerticalOptions="EndAndExpand"> -->
+        <!--         <ActivityIndicator.Color> -->
+        <!--             <OnPlatform x:TypeArguments="Color"> -->
+        <!--                 <On Platform="Android" Value="{StaticResource primaryColor}" /> -->
+        <!--             </OnPlatform> -->
+        <!--         </ActivityIndicator.Color> -->
+        <!--     </ActivityIndicator> -->
+        <!--     <Label TextColor="{StaticResource asphaltDark}" HorizontalOptions="Center">Loading...</Label> -->
+        <!-- </StackLayout> -->
     </pages:FoodsXamlPage.Content>
 </pages:FoodsXamlPage>
