dashboard app improments
Former-commit-id: dfb49a1eae6bca7e8b606e8235750edbeacb7dcb
Former-commit-id: 9e579ae7c23371cc08ffdccee37a0af463714b77 [formerly 6e060faca00cbeefa21004848892b4ed23e16f09]
Former-commit-id: e77e62499be8be6a61eebdebaa659b627f532b5b

--- a/src/Server/web/web.admin/dashboard/src/app/components/account/login/login.component.html
+++ b/src/Server/web/web.admin/dashboard/src/app/components/account/login/login.component.html
@@ -7,7 +7,7 @@
       here, you must <a routerLink="/register">register a new account</a>.</p>
     <img src="assets/images/open-identity.png" width="175" class="mb-4" />
     <p>
-      <button mat-stroked-button (click)="login()">Login with IdentityServer</button>
+      <button (click)="login()">Login with IdentityServer</button>
     </p>
   </div>
 </mat-card>
