dashboard app changes
Former-commit-id: 990b052614a33d10bce643818ab66525f243cc04
Former-commit-id: ae9950db7532a14a46b45e45fbdf7bda6aa26d1c [formerly 1eaea355803f8ad20475fcdd2c8b69062d5b66da]
Former-commit-id: b2a42cac9b38c7097f7b0875f8156b4551dd09d0

--- a/src/Server/web/web.admin/dashboard/src/app/components/account/login/login.component.html
+++ b/src/Server/web/web.admin/dashboard/src/app/components/account/login/login.component.html
@@ -4,10 +4,9 @@
     <p class="lead">This step uses the <a
         href="http://docs.identityserver.io/en/latest/topics/grant_types.html#implicit" target="_blank">implicit flow
         type</a> and redirects to the IdentityServer instance to perform the authentication step. Before you can login
-      here, you must <a routerLink="/register">register a new account</a>.</p>
-    <img src="assets/images/open-identity.png" width="175" class="mb-4" />
+      here, you must <a routerLink="#">register a new account</a>.</p>
     <p>
-      <button (click)="login()">Login with IdentityServer</button>
+      <mat-spinner-button color="primary" [options]="loginButtonsOpts" (click)="login()"></mat-spinner-button>
     </p>
   </div>
 </mat-card>
