--- a/src/Server/web/web.admin/dashboard/src/app/components/categories/list/list.component.css
+++ b/src/Server/web/web.admin/dashboard/src/app/components/categories/list/list.component.css
@@ -15,7 +15,14 @@ table {
   left: auto;
 }
 
-.mat-cell {
-  flex: auto
+.mat-cell:nth-child(1), .mat-header-cell:nth-child(1){
+  flex: 0 0 45%;
 }
 
+.mat-cell:nth-child(2), .mat-header-cell:nth-child(2){
+  flex: 0 0 45%;
+}
+
+.mat-cell:nth-child(3), .mat-header-cell:nth-child(3) {
+  flex: 0 0 10%;
+}
