--- a/src/Server/web/web.admin/dashboard/src/app/components/foods/list/list.component.css
+++ b/src/Server/web/web.admin/dashboard/src/app/components/foods/list/list.component.css
@@ -12,3 +12,23 @@ table {
   top: auto;
   left: auto;
 }
+
+.mat-cell:nth-child(1), .mat-header-cell:nth-child(1){
+  flex: 0 0 22.5%;
+}
+
+.mat-cell:nth-child(2), .mat-header-cell:nth-child(2){
+  flex: 0 0 22.5%;
+}
+
+.mat-cell:nth-child(3), .mat-header-cell:nth-child(3) {
+  flex: 0 0 22.5%;
+}
+
+.mat-cell:nth-child(4), .mat-header-cell:nth-child(4) {
+  flex: 0 0 22.5%;
+}
+
+.mat-cell:nth-child(5), .mat-header-cell:nth-child(5) {
+  flex: 0 0 10%;
+}
