--- a/src/Server/web/web.admin/dashboard/src/app/components/foods/list/list.component.html
+++ b/src/Server/web/web.admin/dashboard/src/app/components/foods/list/list.component.html
@@ -1,27 +1,27 @@
 <div class="container">
   <mat-card>
-    <table mat-table [dataSource]="foods$ | async">
+    <mat-table [dataSource]="foods$ | async">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+        <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{row.description}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Category </th>
-        <td mat-cell *matCellDef="let row"> {{row.category?.name}} </td>
+        <mat-header-cell *matHeaderCellDef> Category </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{row.category?.name}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef> Price </th>
-        <td mat-cell *matCellDef="let row"> {{row.price}} </td>
+        <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{row.price}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>
+        <mat-header-cell *matHeaderCellDef>
           Actions
-        </th>
-        <td mat-cell *matCellDef="let row">
+        </mat-header-cell>
+        <mat-cell *matCellDef="let row">
           <button mat-icon-button [matMenuTriggerFor]="beforeMenu">
             <mat-icon>more_vert</mat-icon>
           </button>
@@ -35,11 +35,11 @@
               Delete
             </button>
           </mat-menu>
-        </td>
+        </mat-cell>
       </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-     </table>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+     </mat-table>
   </mat-card>
   <button mat-fab class="pos-fix" routerLink="/foods/create">
     <mat-icon>add</mat-icon>
