Dashboard APP: Delete food functionality and k8s deployment added
Former-commit-id: 232c7b041011ce4837b414d9d838b8e2e1f6ead9
Former-commit-id: d54ce6aa5b93c6e38d81e0e2e7c7a30455a19957 [formerly 1b9bdbee6810349ecb9f4a4fe17c284f45b8d053]
Former-commit-id: f6ae12dd22930a5a021550baf6f2c89a3eb09698

--- a/src/Server/web/web.admin/dashboard/src/app/components/foods/add/add.component.html
+++ b/src/Server/web/web.admin/dashboard/src/app/components/foods/add/add.component.html
@@ -1,5 +1,5 @@
 <mat-card class="container">
-  <form #foodForm (ngSubmit)="onSubmit(foodForm)">
+  <form #foodForm (ngSubmit)="onSubmit(foodForm, file)">
     <mat-card-content class="form-container">
       <mat-form-field>
         <input matInput placeholder="Food name" [(ngModel)]="food.name" name="name">
