--- a/src/backend/web/web.client/web-app/src/App.css
+++ b/src/backend/web/web.client/web-app/src/App.css
@@ -1,28 +1,38 @@
-.App {
-  text-align: center;
+/* .header, .menu, .content {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.app {
+  min-height: 100%;
+  flex-direction: column;
+  display: flex;
+  min-width: 900px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+html, #root, body {
+  height: 100%;
+  margin: 0px;
 }
 
-.App-title {
-  font-size: 1.5em;
+body {
+  font-family: Helvetica, Arial;
 }
 
-.App-intro {
-  font-size: large;
+.app-body {
+  display: flex;
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.content {
+  position: relative;
+  flex: 1;
 }
+
+
+.circular{
+  position:absolute;  
+  left:0; right:0;
+  top:0; bottom:0;
+  margin:auto;
+}
+  */
