nginx changes for order api

--- a/src/backend/services/identity.api/Identity.API/Views/Account/Login.cshtml
+++ b/src/backend/services/identity.api/Identity.API/Views/Account/Login.cshtml
@@ -56,6 +56,11 @@
                                             Login
                                         </button>
                                     </div>
+                                    <div class="form-group">
+                                        <label>Demo email: admin@inbox.com</label>
+                                        <label>Demo password: Test@123</label>
+                                    </div>
+
                                     <div class="mt-4 text-center">
                                         Don't have an account? <a asp-controller="Account" asp-action="Register">Create One</a>
                                     </div>
