--- a/src/backend/services/identity.api/Identity.API/Views/Consent/_ScopeListItem.cshtml
+++ b/src/backend/services/identity.api/Identity.API/Views/Consent/_ScopeListItem.cshtml
@@ -1,20 +1,20 @@
-﻿@using Identity.API.Controllers.Consent
-@model Identity.API.Controllers.Consent.ScopeViewModel
+﻿﻿@using Identity.API.Controllers.Consent
+@model ScopeViewModel
 
 <li class="list-group-item">
     <label>
         <input class="consent-scopecheck"
                type="checkbox"
                name="ScopesConsented"
-               id="scopes_@Model.Name"
-               value="@Model.Name"
+               id="scopes_@Model.Value"
+               value="@Model.Value"
                checked="@Model.Checked"
                disabled="@Model.Required" />
         @if (Model.Required)
         {
             <input type="hidden"
                    name="ScopesConsented"
-                   value="@Model.Name" />
+                   value="@Model.Value" />
         }
         <strong>@Model.DisplayName</strong>
         @if (Model.Emphasize)
@@ -29,7 +29,7 @@
     @if (Model.Description != null)
     {
         <div class="consent-description">
-            <label for="scopes_@Model.Name">@Model.Description</label>
+            <label for="scopes_@Model.Value">@Model.Description</label>
         </div>
     }
 </li>
