--- a/src/backend/services/identity.api/Identity.API/Views/_ViewImports.cshtml
+++ b/src/backend/services/identity.api/Identity.API/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Identity.API.Controllers.Consent
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
